update to swagger config
