# server.js
@@ -7,7 +7,11 @@ const app = express();
 const port = process.env.PORT || 3000;
 
 // Middleware to parse JSON
-app.use(cors());
+app.use(cors({
+  origin: "*",  
+  methods: ["GET", "POST", "PUT", "DELETE", "PATCH"],
+  allowedHeaders: ["Content-Type", "Authorization"], // 🔑 important
+}));
 app.use(express.json());
 
 app.use(bodyParser.json());
